# priority-config

./: Makefile  README.md  pyproject.toml
.dev/: test_mermaid.md
examples/: getting_started.py
mgmt/: 99_BULLETIN_BOARD.org
src/priority_config/: PriorityConfig.py  __init__.py
tests/custom/: test_pip_install.py  test_src_test_agreement.py
tests/github/: Dockerfile  README.md  docker-compose.yml  local_ci.py  run_docker_ci.sh  run_local_ci.sh
tests/priority_config/: test_PriorityConfig.py  test___init__.py
