# pyproject.toml
[project]
name = "priority-config"
version = "0.1.0"
description = "Universal config resolver with precedence: direct → config → env → default"
authors = [
    {name = "Yusuke Watanabe", email = "Yusuke.Watanabe@scitex.ai"}
]
maintainers = [
    {name = "Yusuke Watanabe", email = "Yusuke.Watanabe@scitex.ai"}
]
license = "MIT"
readme = "README.md"
keywords = ["configuration", "config", "environment", "precedence", "settings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/ywatanabe1989/priority-config"
Repository = "https://github.com/ywatanabe1989/priority-config"
Documentation = "https://github.com/ywatanabe1989/priority-config"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["priority_config"]
package-dir = {"" = "src"}

# ===== Ruff Configuration =====
[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

# ===== MyPy Configuration =====
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/priority_config"]

# ===== Pytest Configuration =====
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]